--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -61,6 +61,13 @@
       <aside class="project-aside">
         <div class="project-info">
           <h1 class="project-title">Chinese National Bag Design</h1>
+          <p>
+            <a
+              href="https://rgd.ca/hiring-designers/award-winners/rgd-student-awards-past-winners"
+              >RGD's 2023 Student Awards Honourable Mentions in packaging and
+              1st year student categories</a
+            >
+          </p>
           <p class="project-description">
             For an assignemnt asking to design a bag that represents a nation, I
             wanted to do something more intentional and meaningful for the
