--- a/liminal.html
+++ b/liminal.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-2">
+  <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="project-nav">
@@ -60,19 +60,72 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">Project Three</h1>
+          <h1 class="project-title">Liminal Magazine</h1>
           <p class="project-description">
-            A brief description of your project goes here.
+            Have you ever felt the aching pain of a fleeting moment? Or the
+            confusion in the midst of turmoil? That strange, awkward, and
+            mystical feeling of being in between spaces? That's what it's like
+            being in the liminal.
+          </p>
+          <p class="project-description">
+            The Liminal magazine consists only of photos and illustrations from
+            my Nintendo 3DS. I was inspired by the melancholy I feel at the end
+            of our time together as IDEA 26 approaches and the joy I felt taking
+            photos of my lovely classmates in those happy moments. The archaic
+            3DS photos have the captivating ability to feel familiar and
+            nostalgic to anyone viewing them.
+          </p>
+          <p class="project-description">
+            Please enjoy reading through the magazine, and taking a peek into
+            the lives of me and my classmates here at IDEA.
+          </p>
+          <p class="project-description">
+            Thank you to my contributors: <br />
+            <a href="https://www.linkedin.com/in/chiangalexis/"
+              >alexis chiang,</a
+            >
+            <a href="https://www.linkedin.com/in/wonarch/"
+              >charlie wonpisethkul,
+            </a>
+            <a href="https://www.linkedin.com/in/neeka-yazdani-8128aa303/"
+              >neeka yazdani, </a
+            >
+            <a href="https://www.linkedin.com/in/sophia-pan-9811b92aa/"
+              >sophia pan, </a
+            >
+            <a href="https://www.linkedin.com/in/andychau4/"
+              >andy chau, </a
+            >
+            <a href="https://www.linkedin.com/in/jessica-baik-0b7802319/"
+              >jessica baik, </a
+            >
+            <a href=https://www.linkedin.com/in/tricia-tang-7273a8217/"
+              >tricia tang, </a
+            >
+            <a href="https://www.linkedin.com/in/jordan-vanbergen/"
+              >jordan van bergen, </a
+            >
+            <a href="https://www.linkedin.com/in/siobhan-barry/"
+              >siobhan barry, </a
+            >
+            <a href="https://www.linkedin.com/in/andrew-poystila-42b723229/"
+              >andy poystila, </a
+            >
+          
+            <a href="https://www.linkedin.com/in/jkambashi/"
+              >jerry kambashi</a
+            >
+            
           </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="project-1.html" class="navigation-arrow"
+            <a href="foundry-refresh.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="#" class="navigation-arrow"
+            <a href="chinese-national-bag.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
@@ -81,10 +134,82 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/images/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
-            width="1000"
-            height="1000"
-            alt="A description of the image"
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-mockup.jpg"
+            width="1900"
+            height="1466"
+            alt="The front cover and part of an inside spread for the Liminal magazine."
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-1.jpg"
+            width="500"
+            height="1229"
+            alt="Liminal cover featuring young woman Alexis in a coffee shop melancholically looking off and to the side. It appears as if she is glowing."
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-2.jpg"
+            width="1900"
+            height="1229"
+            alt=""
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design3.jpg"
+            width="1900"
+            height="1229"
+            alt=""
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-4.jpg"
+            width="1900"
+            height="1229"
+            alt=""
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-5.jpg"
+            width="1900"
+            height="1229"
+            alt=""
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-6.jpg"
+            width="1900"
+            height="1229"
+            alt=""
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-7.jpg"
+            width="1900"
+            height="1229"
+            alt=""
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-8.jpg"
+            width="1900"
+            height="1229"
+            alt=""
+          />
+        </div>
+        <div class="liminal-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-9.jpg"
+            width="500"
+            height="1229"
+            alt=""
           />
         </div>
       </main>
@@ -159,12 +284,11 @@
         </p>
       </li>
     </ul>
-
     <div id="myID" class="bottomMenu hide">
-      <a href="project-1.html">Previous Project</a>
+      <a href="project-2.html">Next Project</a>
     </div>
 
-    <script type="text/javascript">
+    <script>
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
