--- a/liminal.html
+++ b/liminal.html
@@ -69,7 +69,7 @@
           </p>
           <p class="project-description">
             The Liminal magazine consists only of photos and illustrations from
-            my Nintendo 3DS. I was inspired by the melancholy I feel at the end
+            my Nintendo 3DS. I was inspired by the melancholy I feel as the end
             of our time together as IDEA 26 approaches and the joy I felt taking
             photos of my lovely classmates in those happy moments. The archaic
             3DS photos have the captivating ability to feel familiar and
