--- a/work.html
+++ b/work.html
@@ -208,13 +208,13 @@
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item">
-            <a href="project-1.html">Chinese national bag design</a>
+            <a href="d3adme4t.html">D3ADME4T Music Festival</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html">Queue branding and packaging</a>
+            <a href="liminal.html">Liminal Magazine</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html">Bo-cha beverage branding and packaging</a>
+            <a href="foundry-refresh.html">Foundry Brand Refresh</a>
           </li>
         </ul>
       </li>
