removed scroll stuff in projects

--- a/bocha.html
+++ b/bocha.html
@@ -153,7 +153,6 @@
         </ul>
       </li>
       <li class="footer-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
           &copy; 2024-2026. Coded frantically by Caroline Zhang.
         </p>
@@ -161,7 +160,7 @@
     </ul>
 
     <div id="myID" class="bottomMenu hide">
-      <a href="project-1.html">Previous Project</a>
+      <a href="#">Back to top</a>
     </div>
 
     <script type="text/javascript">
