--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -201,14 +201,13 @@
         </ul>
       </li>
       <li class="footer-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
           &copy; 2024-2026. Coded frantically by Caroline Zhang.
         </p>
       </li>
     </ul>
     <div id="myID" class="bottomMenu hide">
-      <a href="project-2.html">Next Project</a>
+      <a href="#">Back to top</a>
     </div>
 
     <script>
