--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -241,7 +241,6 @@
         </ul>
       </li>
       <li class="footer-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
           &copy; 2024-2026. Coded frantically by Caroline Zhang.
         </p>
@@ -249,7 +248,7 @@
     </ul>
 
     <div id="myID" class="bottomMenu hide">
-      <a href="project-1.html">Previous Project</a>
+      <a href="#">Back to top</a>
     </div>
 
     <script type="text/javascript">
