--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -179,19 +179,24 @@
     </div>
     <ul class="global-footer">
       <li class="footer-item-1">
-        <h2>About Me</h2>
+        <h2>About Caroline</h2>
         <p class="about-desc">
-          Hi there, I’m Caroline, a graphic designer and overall big thinker
-          based in Vancouver. Right now I’m a third year student in the IDEA
-          School of Design with a focus on branding and a smattering of
-          illustration and UX. Research and analysis is where I feel at home—if
-          you’ve got a question or a problem I’m your guy.
+          Hi there, I’m Caroline, a graphic designer based in Vancouver. Right
+          now I’m a third year student at the IDEA School of Design with a focus
+          on brand design and a smattering of illustration and UX. I really like
+          all aspects of design, but my favourite is problem solving.
+        </p>
+        <p class="about-desc">
+          There’s a lot of things I’m interested in, but my one true love is
+          video games (you’ll find me as wigggle). It inspires me both
+          artistically and analytically in my day to day. I’ve also been
+          consistently working part time in the service industry since I was 14,
+          so I am all too familiar with solving problems on the fly and working
+          efficiently.
         </p>
         <p>
-          My interests are vast and varied but my one true love is video games.
-          I go from grinding at work to grinding levels virtually and efficiency
-          is my key to success. I live next to computers so feel free to reach
-          out and I’ll get back to you as soon as I can (after one more game).
+          I spend every waking moment next to computers. Feel free to reach out
+          and I’ll get back to you as soon as I can (after one more game).
         </p>
       </li>
       <li class="footer-item-2">
