changed header for global and fixed project links

--- a/about.html
+++ b/about.html
@@ -23,8 +23,7 @@
   <body class="about-page">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html">Work</a></li>
-        <li class="logo-on-white">
+        <li class="logo">
           <a href="work.html">
             <svg
               class="wordmark"
@@ -52,7 +51,6 @@
             </svg>
           </a>
         </li>
-        <li><a href="about.html">About</a></li>
       </ul>
     </header>
     <ul class="about">
