--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -23,10 +23,7 @@
   <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li class="project-nav">
-          <a href="work.html">Work</a>
-        </li>
-        <li class="logo-on-white">
+        <li class="logo">
           <a href="work.html">
             <svg
               class="wordmark"
@@ -54,7 +51,6 @@
             </svg>
           </a>
         </li>
-        <li><a href="about.html">About</a></li>
       </ul>
     </header>
     <div class="project-wrapper">
@@ -89,17 +85,17 @@
             dynasties. Each dynasty came with it's own set of innovations in
             both the art and technology fields. By combining the dynasty names
             with seal stamps, I wanted to redefine "Made in China" to represent
-            the history, innovatio, and artistic merit of the nation.
+            the history, innovation, and artistic merit of the nation.
           </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="#" class="navigation-arrow"
+            <a href="liminal.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="project-2.html" class="navigation-arrow"
+            <a href="bocha.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
