--- a/queue.html
+++ b/queue.html
@@ -23,10 +23,7 @@
   <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li class="project-nav">
-          <a href="work.html">Work</a>
-        </li>
-        <li class="logo-on-white">
+        <li class="logo">
           <a href="work.html">
             <svg
               class="wordmark"
@@ -54,7 +51,6 @@
             </svg>
           </a>
         </li>
-        <li><a href="about.html">About</a></li>
       </ul>
     </header>
     <div class="project-wrapper">
@@ -80,12 +76,12 @@
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="project-1.html" class="navigation-arrow"
+            <a href="bocha.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="project-3.html" class="navigation-arrow"
+            <a href="d3adme4t.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
