--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
               >Instagram</a
             >
           </li>
-          <li class="logo">
+          <li class="logo-home">
             <svg
               class="wordmark"
               xmlns="http://www.w3.org/2000/svg"
