--- a/liminal.html
+++ b/liminal.html
@@ -23,10 +23,7 @@
   <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li class="project-nav">
-          <a href="work.html">Work</a>
-        </li>
-        <li class="logo-on-white">
+        <li class="logo">
           <a href="work.html">
             <svg
               class="wordmark"
@@ -54,7 +51,6 @@
             </svg>
           </a>
         </li>
-        <li><a href="about.html">About</a></li>
       </ul>
     </header>
     <div class="project-wrapper">
