removed bocha lol

--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
   <body class="work-page">
     <section class="hero gradient-animation">
       <header class="hero-header">
-        <ul class="branding-navigation">
+        <ul class="branding-home-navigation">
           <li class="nav">
             <a href="about.html" class="custom-navigation">About</a>
           </li>
@@ -115,20 +115,6 @@
             <a href="chinese-national-bag.html">
               <div class="overlay">
                 <h1 class="overlay-title">Chinese national bag</h1>
-                <h4 class="overlay-description">Branding</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
-                alt="Transit ad for a bubble tea drink with personified boba pearls squished together."
-              />
-            </figure>
-            <a href="bocha.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Boba Packaging</h1>
                 <h4 class="overlay-description">Branding</h4>
               </div>
             </a>
