changed selected works globally

--- a/liminal.html
+++ b/liminal.html
@@ -249,13 +249,13 @@
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item">
-            <a href="project-1.html">Chinese national bag design</a>
+            <a href="d3adme4t.html">D3ADME4T Music Festival</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html">Queue branding and packaging</a>
+            <a href="liminal.html">Liminal Magazine</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html">Bo-cha beverage branding and packaging</a>
+            <a href="foundry-refresh.html">Foundry Brand Refresh</a>
           </li>
         </ul>
       </li>
@@ -279,9 +279,8 @@
         </ul>
       </li>
       <li class="footer-item-4">
-     
         <p class="fineprint">
-          &copy; 2024-2026. Coded frantically by Caroline Zhang.
+          &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </li>
     </ul>
