--- a/queue.html
+++ b/queue.html
@@ -76,7 +76,7 @@
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="bocha.html" class="navigation-arrow"
+            <a href="chinese-national-bag.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
@@ -137,14 +137,40 @@
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item">
-            <a href="project-1.html">Chinese national bag design</a>
+            <a href="d3adme4t.html">D3ADME4T Music Festival</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html">Queue branding and packaging</a>
+            <a href="liminal.html">Liminal Magazine</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html">Bo-cha beverage branding and packaging</a>
+            <a href="foundry-refresh.html">Foundry Brand Refresh</a>
           </li>
+        </ul>
+      </li>
+      <li class="footer-item-3">
+        <h2>Contact &amp; Social</h2>
+        <ul class="socials-list">
+          <li class="social-item">
+            <a href="https://www.behance.net/wigggle">Behance</a>
+          </li>
+          <li class="social-item">
+            <a href="https://www.instagram.com/wiggggggggggle/?hl=en"
+              >Instagram</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/wigggle/">LinkedIn</a>
+          </li>
+          <li class="social-item">
+            <a href="mailto:yuqizhang@my.capilanou.ca">hit me up!</a>
+          </li>
+        </ul>
+      </li>
+      <li class="footer-item-4">
+        <p class="fineprint">
+          &copy; 2024-2026. Coded frantically by yours truly.
+        </p>
+      </li>
         </ul>
       </li>
       <li class="footer-item-3">
