--- a/queue.html
+++ b/queue.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-2">
+  <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
@@ -56,23 +56,28 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">The Title Of Your Project</h1>
+          <h1 class="project-title">Foundry Brand Refresh and Strategy</h1>
           <p class="project-description">
-            A brief description of your project goes here. The background colors
-            are only to show you the
-            <em>.project-aside</em>
-            and
-            <em>.project-details</em>
-            boxes.
+            Sometimes in a game it can feel like you're fighting against everyone...
           </p>
           <p class="project-description">
-            This is a sticky sidebar (
-            <em>.project-aside</em>
-            ) so that your project title and description remain visible as you
-            scroll down the page. To remove the sticky sidebar, see
-            <em>Sidebar on Large Devices</em>
-            in style.css.
+            Here at the Queue internet cafe we provide a safe space for those identifying
+            as a nonconforming gender to play video
+            games. Unlike other internet cafes or online
+            servers, our business is all about forming a safe
+            community to form friendships and gain experience.
           </p>
+          <p class="project-description">
+            Alongside internet services and community activities, Queue has a series of collectible keycaps that can be used to customize keyboards. Playing on the classic gaming trope of party members with different classes, each Queue keycap is designed to represent a different gender identity (with a blank one available to make it your own!). Whether its through in-game skins or decking out their PC setup, gamers love to find ways to express
+themselves while gaming. These keycaps feature the Queue and community branding while being low profile enough to exist outside of the
+Queue cafe. Despite being representations of
+an individual’s identity, the Queue mice look good
+and truly shine as a team. Users are
+encouraged to collect multiples to
+represent their own gaming group and connections.
+          </p>
+          
+          
         </div>
         <ul class="project-navigation">
           <li class="arrow">
@@ -90,10 +95,26 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/images/caroline-zhang-keycap-packaging-design-photography.jpg"
-            width="1000"
-            height="1000"
-            alt="A description of the image"
+            src="assets/images/caroline-zhang-queue-packaging-design-1.jpg"
+            width="1900"
+            height="1325"
+            alt="Photograph of 3 different versions of the Queue keycap package"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-queue-packaging-design-2.jpg"
+            width="1900"
+            height="1267"
+            alt="Photograph of the 3 Queue keycaps lined up."
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-queue-packaging-design-3.gif"
+            width="1500"
+            height="1263"
+            alt="A gif flicking through 3 dieline photos of the Queue keycap packaging."
           />
         </div>
       </main>
@@ -171,7 +192,6 @@
           &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </li>
-        </ul>
       </li>
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
@@ -198,12 +218,11 @@
         </p>
       </li>
     </ul>
-
     <div id="myID" class="bottomMenu hide">
       <a href="#">Back to top</a>
     </div>
 
-    <script type="text/javascript">
+    <script>
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
