added gif to deadmeat

--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -143,34 +143,19 @@
         </div>
         <script src="https://player.vimeo.com/api/player.js"></script>
         <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-1.jpg"
-            width="500"
-            height="1050"
-            alt="poster for the D3ADME4T music festival."
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-2.jpg"
-            width="500"
-            height="1050"
-            alt="poster for the D3ADME4T music festival."
-          />
-        </div>
-        <div class="project-image">
           <figure>
-            <img
-              src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-3.jpg"
-              width="500"
-              height="1050"
-              alt="poster for the D3ADME4T music festival."
-            />
-            <figcaption class="caption">
-              Please note, pixelization is intentional!
-            </figcaption>
-          </figure>
+          <img
+            src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-1.gif"
+            width="500"
+            height="1050"
+            alt="poster for the D3ADME4T music festival."
+          />
+          <figcaption class="caption">
+            Please note, pixelization is intentional!
+          </figcaption>
+        </figure>
         </div>
+       
       </main>
     </div>
     <ul class="global-footer">
