fixed broken footers

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
-          <a href="work.html">
+          <a href="home.html">
             <svg
               class="wordmark"
               xmlns="http://www.w3.org/2000/svg"
