--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
   <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li><a href="home.html" class="custom-navigation">Work</a></li>
         <li class="logo">
           <a href="index.html"><img src="assets/branding-images/logo.svg" /></a>
         </li>
@@ -138,7 +138,7 @@
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
+          <li class="footer-nav-item"><a href="home.html">Work Page</a></li>
           <li class="footer-nav-item">
             <a href="work-clean.html">Work Page (Clean Version)</a>
           </li>
