--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -24,7 +24,7 @@
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
-          <a href="work.html">
+          <a href="home.html">
             <svg
               class="wordmark"
               xmlns="http://www.w3.org/2000/svg"
@@ -206,37 +206,13 @@
           &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </li>
-      </li>
-      <li class="footer-item-3">
-        <h2>Contact &amp; Social</h2>
-        <ul class="socials-list">
-          <li class="social-item">
-            <a href="https://www.behance.net/wigggle">Behance</a>
-          </li>
-          <li class="social-item">
-            <a href="https://www.instagram.com/wiggggggggggle/?hl=en"
-              >Instagram</a
-            >
-          </li>
-          <li class="social-item">
-            <a href="https://www.linkedin.com/in/wigggle/">LinkedIn</a>
-          </li>
-          <li class="social-item">
-            <a href="mailto:yuqizhang@my.capilanou.ca">hit me up!</a>
-          </li>
-        </ul>
-      </li>
-      <li class="footer-item-4">
-        <p class="fineprint">
-          &copy; 2024-2026. Coded frantically by Caroline Zhang.
-        </p>
-      </li>
     </ul>
+
     <div id="myID" class="bottomMenu hide">
       <a href="#">Back to top</a>
     </div>
 
-    <script>
+    <script type="text/javascript">
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
