--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
 
           <li class="nav">
             <a href="mailto:yuqizhang@my.capilanou.ca" class="custom-navigation"
-              >Email me!</a
+              >hit me up!</a
             >
           </li>
         </ul>
