--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="5; url=work.html" />
+    <meta http-equiv="refresh" content="5; url=home.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="screenshot.jpg" />
     <link
@@ -24,7 +24,7 @@
   <body class="holding-page">
     <div class="holding-page-wrapper">
       <div class="holding-page-inner-container">
-        <a href="work.html">
+        <a href="home.html">
           <figure class="holding-page-animation">
             <img src="assets/images/swadloon.gif" alt="Portfolio Incoming!!" />
           </figure>
