--- a/queue.html
+++ b/queue.html
@@ -24,7 +24,7 @@
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
-          <a href="work.html">
+          <a href="home.html">
             <svg
               class="wordmark"
               xmlns="http://www.w3.org/2000/svg"
@@ -56,28 +56,31 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">Foundry Brand Refresh and Strategy</h1>
+          <h1 class="project-title">Queue Packaging</h1>
           <p class="project-description">
-            Sometimes in a game it can feel like you're fighting against everyone...
+            Sometimes in a game it can feel like you're fighting against
+            everyone...
           </p>
           <p class="project-description">
-            Here at the Queue internet cafe we provide a safe space for those identifying
-            as a nonconforming gender to play video
-            games. Unlike other internet cafes or online
-            servers, our business is all about forming a safe
-            community to form friendships and gain experience.
+            Here at the Queue internet cafe we provide a safe space for those
+            identifying as a nonconforming gender to play video games. Unlike
+            other internet cafes or online servers, our business is all about
+            forming a safe community to form friendships and gain experience.
           </p>
           <p class="project-description">
-            Alongside internet services and community activities, Queue has a series of collectible keycaps that can be used to customize keyboards. Playing on the classic gaming trope of party members with different classes, each Queue keycap is designed to represent a different gender identity (with a blank one available to make it your own!). Whether its through in-game skins or decking out their PC setup, gamers love to find ways to express
-themselves while gaming. These keycaps feature the Queue and community branding while being low profile enough to exist outside of the
-Queue cafe. Despite being representations of
-an individual’s identity, the Queue mice look good
-and truly shine as a team. Users are
-encouraged to collect multiples to
-represent their own gaming group and connections.
+            Alongside internet services and community activities, Queue has a
+            series of collectible keycaps that can be used to customize
+            keyboards. Playing on the classic gaming trope of party members with
+            different classes, each Queue keycap is designed to represent a
+            different gender identity (with a blank one available to make it
+            your own!). Whether its through in-game skins or decking out their
+            PC setup, gamers love to find ways to express themselves while
+            gaming. These keycaps feature the Queue and community branding while
+            being low profile enough to exist outside of the Queue cafe. Despite
+            being representations of an individual’s identity, the Queue mice
+            look good and truly shine as a team. Users are encouraged to collect
+            multiples to represent their own gaming group and connections.
           </p>
-          
-          
         </div>
         <ul class="project-navigation">
           <li class="arrow">
@@ -192,37 +195,13 @@ represent their own gaming group and connections.
           &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </li>
-      </li>
-      <li class="footer-item-3">
-        <h2>Contact &amp; Social</h2>
-        <ul class="socials-list">
-          <li class="social-item">
-            <a href="https://www.behance.net/wigggle">Behance</a>
-          </li>
-          <li class="social-item">
-            <a href="https://www.instagram.com/wiggggggggggle/?hl=en"
-              >Instagram</a
-            >
-          </li>
-          <li class="social-item">
-            <a href="https://www.linkedin.com/in/wigggle/">LinkedIn</a>
-          </li>
-          <li class="social-item">
-            <a href="mailto:yuqizhang@my.capilanou.ca">hit me up!</a>
-          </li>
-        </ul>
-      </li>
-      <li class="footer-item-4">
-        <p class="fineprint">
-          &copy; 2024-2026. Coded frantically by Caroline Zhang.
-        </p>
-      </li>
     </ul>
+
     <div id="myID" class="bottomMenu hide">
       <a href="#">Back to top</a>
     </div>
 
-    <script>
+    <script type="text/javascript">
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
