--- a/work-clean.html
+++ b/work-clean.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Free Creative Portfolio Template: Oct 2024 Version | Work Page</title>
+    <title>
+      Free Creative Portfolio Template: Oct 2024 Version | Work Page
+    </title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!" />
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="screenshot.jpg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-    <script src="https://kit.fontawesome.com/d300c2ea15.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/d300c2ea15.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
@@ -17,23 +26,31 @@
     <section class="hero">
       <header class="hero-header">
         <ul class="branding-navigation">
-          <li><a href="work.html" class="custom-navigation">Work</a></li>
+          <li><a href="home.html" class="custom-navigation">Work</a></li>
           <li class="logo">
-            <a href="index.html"><img src="assets/branding-images/logo.svg" alt="Describe your project" /></a>
+            <a href="index.html"
+              ><img
+                src="assets/branding-images/logo.svg"
+                alt="Describe your project"
+            /></a>
           </li>
           <li><a href="about.html" class="custom-navigation">About</a></li>
         </ul>
       </header>
       <div class="hero-headline-wrapper">
         <h1 class="hero-headline">
-          Hello, I'm a clean version of the work page without any of the effects. A great place to start to keep things
-          minimal.
+          Hello, I'm a clean version of the work page without any of the
+          effects. A great place to start to keep things minimal.
         </h1>
       </div>
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
           <li><a href="#" class="custom-navigation">Instagram</a></li>
-          <li><a href="mailto:james@magnetude.com" class="custom-navigation">Email</a></li>
+          <li>
+            <a href="mailto:james@magnetude.com" class="custom-navigation"
+              >Email</a
+            >
+          </li>
         </ul>
       </footer>
     </section>
@@ -46,7 +63,8 @@
               <figure>
                 <img
                   src="assets/temp/first-name-last-name--project-title--category-3.jpg"
-                  alt="Describe your project" />
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
@@ -55,7 +73,8 @@
               <figure>
                 <img
                   src="assets/temp/first-name-last-name--project-title--category-1.jpg"
-                  alt="Describe your project" />
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
@@ -64,14 +83,18 @@
               <figure>
                 <img
                   src="assets/temp/first-name-last-name--project-title--category-2.jpg"
-                  alt="Describe your project" />
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
           <li class="work-page-grid-item">
             <a href="project-1.html">
               <figure>
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg" alt="Describe your project" />
+                <img
+                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg"
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
@@ -80,14 +103,18 @@
               <figure>
                 <img
                   src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/pawel-czerwinski.jpg"
-                  alt="Describe your project" />
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
           <li class="work-page-grid-item">
             <a href="project-1.html">
               <figure>
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg" alt="Describe your project" />
+                <img
+                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg"
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
@@ -96,14 +123,18 @@
               <figure>
                 <img
                   src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/white-paper.jpg"
-                  alt="Describe your project" />
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
           <li class="work-page-grid-item">
             <a href="project-1.html">
               <figure>
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg" alt="Describe your project" />
+                <img
+                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg"
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
@@ -112,7 +143,8 @@
               <figure>
                 <img
                   src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/pawel-czerwinski.jpg"
-                  alt="Describe your project" />
+                  alt="Describe your project"
+                />
               </figure>
             </a>
           </li>
@@ -124,19 +156,30 @@
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          A highly customizable portfolio starter template with a big hero for your branding and intro. The work page is
-          based on
-          <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">CSS Grid</a>
-          . The project page has a sticky sidebar. Beginngers can add their own logo,
-          <a href="https://fonts.google.com/" target="_blank">custom typography</a>
+          A highly customizable portfolio starter template with a big hero for
+          your branding and intro. The work page is based on
+          <a
+            href="https://css-tricks.com/snippets/css/complete-guide-grid/"
+            target="_blank"
+            >CSS Grid</a
+          >
+          . The project page has a sticky sidebar. Beginngers can add their own
+          logo,
+          <a href="https://fonts.google.com/" target="_blank"
+            >custom typography</a
+          >
           , custom colours, custom hover states, custom cursor, and more.
         </p>
         <p>
-          Customize the hero and footer. Make something randomly fly across the screen! Experiment with
-          <a href="https://mycolor.space/gradient" target="_blank">animated gradients</a>
+          Customize the hero and footer. Make something randomly fly across the
+          screen! Experiment with
+          <a href="https://mycolor.space/gradient" target="_blank"
+            >animated gradients</a
+          >
           , animated GIFs, and
           <a href="https://www.svgator.com/" target="_blank">animated SVGs</a>
-          ! Add your own typewriter effect, parallax effect or custom effects and easter eggs! Consider adding a
+          ! Add your own typewriter effect, parallax effect or custom effects
+          and easter eggs! Consider adding a
           <a href="play.html">Play</a>
           page or
           <a href="resume.html">resume</a>
@@ -155,12 +198,24 @@
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
-          <li class="footer-nav-item"><a href="work-clean.html">Work Page (Clean Version)</a></li>
-          <li class="footer-nav-item"><a href="work-clean-flier.html">Work Page (Clean Version with Flier)</a></li>
-          <li class="footer-nav-item"><a href="work-grayscale.html">Work Page (Grayscale Filter)</a></li>
-          <li class="footer-nav-item"><a href="work-ghost.html">Work Page (Ghost Flying Icon)</a></li>
-          <li class="footer-nav-item"><a href="project-1.html">Project Page</a></li>
+          <li class="footer-nav-item"><a href="home.html">Work Page</a></li>
+          <li class="footer-nav-item">
+            <a href="work-clean.html">Work Page (Clean Version)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-clean-flier.html"
+              >Work Page (Clean Version with Flier)</a
+            >
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-ghost.html">Work Page (Ghost Flying Icon)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-1.html">Project Page</a>
+          </li>
           <li class="footer-nav-item"><a href="about.html">About</a></li>
         </ul>
       </li>
