--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
             </figure>
             <a href="chinese-national-bag.html">
               <div class="overlay">
-                <h1 class="overlay-title">Chinese national bag</h1>
+                <h1 class="overlay-title">Chinese National Bag</h1>
                 <h4 class="overlay-description">Branding</h4>
               </div>
             </a>
