--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
       </li>
       <li class="about-item-3">
         <h3>What's wigggle playing right now?</h3>
-        <p>Pokémon Platinum (2008) <em>Last updated: May 2025</em></p>
+        <p>Tomodachi Life (2013) <em>Last updated: September 2025</em></p>
 
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
