--- a/liminal.html
+++ b/liminal.html
@@ -136,6 +136,14 @@
             alt="The front cover and part of an inside spread for the Liminal magazine."
           />
         </div>
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-liminal-ad-magazine-design-mockup2.jpg"
+            width="1900"
+            height="1466"
+            alt="The front cover and part of an inside spread for the Liminal magazine."
+          />
+        </div>
         <div class="liminal-image">
           <img
             src="assets/images/caroline-zhang-liminal-ad-magazine-design-1.jpg"
