mic new content

--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -114,8 +114,33 @@
           <img
             src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Poster.jpg"
             width="600"
-            alt="A description of the image"
+            alt=""
           />
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Packaging-box-mockup.jpg"
+              width="1000"
+              alt=""
+            />
+            <figcaption class="caption">
+              Guests can take home their own seal stamp ink from the gift shop.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-ink-pad-mockup.jpg"
+              width="1000"
+              alt=""
+            />
+            <figcaption class="caption">
+              Ink pads feature select artwork from the exhibit and a thick red
+              paste used traditionally for seal stamps.
+            </figcaption>
+          </figure>
         </div>
         <div class="project-image">
           <figure>
