--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -65,14 +65,10 @@
             >
           </p>
           <p class="project-description">
-            For an assignemnt asking to design a bag that represents a nation, I
-            wanted to do something more intentional and meaningful for the
-            chosen nation. Referencing my personal heritage, I decided to make a
-            luxury bag that represents the nation of China. I wanted to
-            challenge the stereotypical notion that "Made in China" means cheap
-            production and poor quality. The use of seal stamps and texture
-            harken to the rich trade and art culture found throughout Chinese
-            history.
+            For this project I wanted to challenge the stereotype that "Made in
+            China" means cheap production and poor quality. The use of seal
+            stamps and texture harken to the rich trade and art culture found
+            throughout Chinese history.
           </p>
           <p class="project-description">
             Originally seal stamps were a method for powerful people to sign off
@@ -81,11 +77,17 @@
             thus became a symbol of its value and artistic merit.
           </p>
           <p class="project-description">
-            The characters making up the stamps represent the various Chinese
-            dynasties. Each dynasty came with it's own set of innovations in
-            both the art and technology fields. By combining the dynasty names
-            with seal stamps, I wanted to redefine "Made in China" to represent
-            the history, innovation, and artistic merit of the nation.
+            The characters making up the stamps represent the Chinese dynasties.
+            Each dynasty came with it's own set of innovations in both the art
+            and technology. By combining the dynasty names with seal stamps, I
+            wanted to redefine "Made in China" to represent the history,
+            innovation, and artistic merit of the nation.
+          </p>
+          <p class="project-description">
+            This project has been extended to a museum exhibit with the same
+            goals, and the bag acting as the gift shop packaging. I created a
+            promotional poster for this as well as an example product which
+            utilizes museum artwork.
           </p>
         </div>
         <ul class="project-navigation">
