--- a/resolve.html
+++ b/resolve.html
@@ -3,33 +3,28 @@
   <head>
     <title>Caroline Zhang // Design Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
-
     <meta
       name="description"
       content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="screenshot.jpg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
-    <script
-      src="https://kit.fontawesome.com/d300c2ea15.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="work-page">
-    <section class="hero gradient-animation">
-      <header class="hero-header">
-        <ul class="branding-home-navigation">
-          <li class="nav">
-            <a href="about.html" class="custom-navigation">About</a>
-          </li>
-          <li class="logo-home">
+  <body class="project-1">
+    <header class="hero-header">
+      <ul class="branding-navigation">
+        <li class="logo">
+          <a href="home.html">
             <svg
               class="wordmark"
               xmlns="http://www.w3.org/2000/svg"
@@ -54,116 +49,141 @@
                 </g>
               </g>
             </svg>
-          </li>
-
-          <li class="nav">
-            <a href="mailto:yuqizhang@my.capilanou.ca" class="custom-navigation"
-              >hit me up!</a
+          </a>
+        </li>
+      </ul>
+    </header>
+    <div class="project-wrapper">
+      <aside class="project-aside">
+        <div class="project-info">
+          <h1 class="project-title">Resolve Social Enterprise</h1>
+          <p class="project-description">
+            Made with contributions from
+            <a href="https://www.linkedin.com/in/andrew-ukko-poystila-42b723229"
+              >Andy Poystila</a
             >
+          </p>
+          <p class="project-description">
+            For this project I wanted to challenge the stereotype that "Made in
+            China" means cheap production and poor quality. The use of seal
+            stamps and texture harken to the rich trade and art culture found
+            throughout Chinese history.
+          </p>
+          <p class="project-description">
+            Originally seal stamps were a method for powerful people to sign off
+            on documents. As this practice became more prevalant, art collectors
+            would stamp pieces they procure. The number of stamps on a piece
+            thus became a symbol of its value and artistic merit.
+          </p>
+          <p class="project-description">
+            The characters making up the stamps represent the Chinese dynasties.
+            Each dynasty came with it's own set of innovations in both the art
+            and technology. By combining the dynasty names with seal stamps, I
+            wanted to redefine "Made in China" to represent the history,
+            innovation, and artistic merit of the nation.
+          </p>
+          <p class="project-description">
+            Interested in seeing more?<br />
+            <a
+              href="https://drive.google.com/file/d/1lt1saeEssxXuWNW1EOUH4fuajSob5Uqm/view?usp=sharing"
+              >Here’s a link to the case study.
+            </a>
+            <a
+              href="https://drive.google.com/file/d/1aoov3j85UuC33OAascTdV_BWEN2lZiRi/view"
+            >
+              And brand guide.
+            </a>
+          </p>
+        </div>
+        <ul class="project-navigation">
+          <li class="arrow">
+            <a href="liminal.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-left fa-2x"></i
+            ></a>
+          </li>
+          <li class="arrow">
+            <a href="queue.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-right fa-2x"></i
+            ></a>
           </li>
         </ul>
-      </header>
-      <div class="hero-headline-wrapper">
-        <h1 class="stroke-shadow">
-          Hi there. I'm Caroline Zhang, a branding design student.
-        </h1>
-      </div>
-      <footer class="hero-footer">
-        <ul class="hero-footer-navigation"></ul>
-      </footer>
-    </section>
-
-    <main class="work-wrapper">
-      <section class="portfolio">
-        <ul class="grid">
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-foundry-rebrand-poster-design-mockup.jpg"
-                alt="Bus shelter ad for mental health and social resource Foundry BC."
-              />
-            </figure>
-            <a href="foundry-refresh.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Foundry Refresh</h1>
-                <h4 class="overlay-description">Brand Strategy</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-liminal-magazine-design.jpg"
-                alt="Liminal branded magazine cover and page set in a cafe."
-              />
-            </figure>
-            <a href="liminal.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Liminal Magazine</h1>
-                <h4 class="overlay-description">Branding/Photography</h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg"
-                alt="Bag design featuring references to Chinese seal stamps built to represent the nation."
-              />
-            </figure>
-            <a href="chinese-national-bag.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Chinese National Bag</h1>
-                <h4 class="overlay-description">Branding</h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-keycap-packaging-design-photography.jpg"
-                alt="Keycap packaging design for a marginalized-gender only internet cafe."
-              />
-            </figure>
-            <a href="queue.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Queue Packaging</h1>
-                <h4 class="overlay-description">Branding</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-music-festival-branding-illustration-poster.jpg"
-                alt="Bus shelter ad for the D3ADME4T music festival. The dog girl mascot is pulling her mouth open and showing her grimace."
-              />
-            </figure>
-            <a href="d3adme4t.html">
-              <div class="overlay">
-                <h1 class="overlay-title">D3ADME4T Music Festival</h1>
-                <h4 class="overlay-description">Illustration/Branding</h4>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </section>
-    </main>
-
+      </aside>
+      <main class="project-details">
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-resolve-social-enterprise-storefront-logo-sign.jpg"
+            width="700"
+            height="700"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-resolve-social-enterprise-poster-2.jpg"
+            width="900"
+            alt=""
+          />
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-resolve-social-enterprise-poster-1.jpg"
+              width="800"
+              alt=""
+            />
+            <figcaption class="caption">
+              Guests can take home their own seal stamp ink from the gift shop.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-ink-pad-mockup.jpg"
+              width="1000"
+              alt=""
+            />
+            <figcaption class="caption">
+              Ink pads feature select artwork from the exhibit and a thick red
+              paste used traditionally for seal stamps.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/chinese-seal-stamps-horse-painting.jpg"
+              width="900"
+              height="1127"
+              alt="A description of the image"
+            />
+            <figcaption class="caption">
+              Night-Shining White by Han Gan (ca. 750) in the Met
+            </figcaption>
+          </figure>
+        </div>
+      </main>
+    </div>
     <ul class="global-footer">
       <li class="footer-item-1">
-        <h2>About Me</h2>
+        <h2>About Caroline</h2>
         <p class="about-desc">
           Hi there, I’m Caroline, a graphic designer based in Vancouver. Right
           now I’m a third year student at the IDEA School of Design with a focus
           on brand design and a smattering of illustration and UX. I really like
           all aspects of design, but my favourite is problem solving.
         </p>
-
+        <p class="about-desc">
+          There’s a lot of things I’m interested in, but my one true love is
+          video games (you’ll find me as wigggle). It inspires me both
+          artistically and analytically in my day to day. I’ve also been
+          consistently working part time in the service industry since I was 14,
+          so I am all too familiar with solving problems on the fly and working
+          efficiently.
+        </p>
         <p>
-          <a href="about.html">I wanna know more!</a>
+          I spend every waking moment next to computers. Feel free to reach out
+          and I’ll get back to you as soon as I can (after one more game).
         </p>
       </li>
       <li class="footer-item-2">
@@ -223,14 +243,7 @@
       <a href="#">Back to top</a>
     </div>
 
-    <div class="flier">
-      <img
-        src="assets/branding-images/mew-floater-maybe.png"
-        alt="Describe your image"
-      />
-    </div>
-
-    <script>
+    <script type="text/javascript">
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
