resolve and about me change

--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -135,24 +135,16 @@
     </div>
     <ul class="global-footer">
       <li class="footer-item-1">
-        <h2>About Caroline</h2>
+        <h2>About Me</h2>
         <p class="about-desc">
           Hi there, I’m Caroline, a graphic designer based in Vancouver. Right
           now I’m a third year student at the IDEA School of Design with a focus
           on brand design and a smattering of illustration and UX. I really like
           all aspects of design, but my favourite is problem solving.
         </p>
-        <p class="about-desc">
-          There’s a lot of things I’m interested in, but my one true love is
-          video games (you’ll find me as wigggle). It inspires me both
-          artistically and analytically in my day to day. I’ve also been
-          consistently working part time in the service industry since I was 14,
-          so I am all too familiar with solving problems on the fly and working
-          efficiently.
-        </p>
+
         <p>
-          I spend every waking moment next to computers. Feel free to reach out
-          and I’ll get back to you as soon as I can (after one more game).
+          <a href="about.html">I wanna know more!</a>
         </p>
       </li>
       <li class="footer-item-2">
