--- a/resolve.html
+++ b/resolve.html
@@ -64,30 +64,29 @@
             >
           </p>
           <p class="project-description">
-            For this project I wanted to challenge the stereotype that "Made in
-            China" means cheap production and poor quality. The use of seal
-            stamps and texture harken to the rich trade and art culture found
-            throughout Chinese history.
+            Resolve empowers formerly incarcerated women through art expression
+            and employment opportunities facilitated by a café-gallery. The name
+            stems from the term often used to describe the incarceration
+            system&#8212;a revolving door. Our commitment to changing the lives
+            of those negatively effected by the justice system is represented by
+            the v in revolving changing to the s in resolve, celebrating the
+            strength that comes up in that time.
           </p>
           <p class="project-description">
-            Originally seal stamps were a method for powerful people to sign off
-            on documents. As this practice became more prevalant, art collectors
-            would stamp pieces they procure. The number of stamps on a piece
-            thus became a symbol of its value and artistic merit.
+            The branding work sets as a supporting frame for the artwork,
+            created and sourced by Andy Poystila for this project. I developed a
+            full system which covers the many various merchandise that the
+            enterprise could sell. Each piece focuses on highlighting the nature
+            and humanity behind the product, making sure to credit the artist
+            and include any information they wish for.
           </p>
-          <p class="project-description">
-            The characters making up the stamps represent the Chinese dynasties.
-            Each dynasty came with it's own set of innovations in both the art
-            and technology. By combining the dynasty names with seal stamps, I
-            wanted to redefine "Made in China" to represent the history,
-            innovation, and artistic merit of the nation.
-          </p>
+
           <p class="project-description">
             Interested in seeing more?<br />
             <a
               href="https://drive.google.com/file/d/1lt1saeEssxXuWNW1EOUH4fuajSob5Uqm/view?usp=sharing"
-              >Here’s a link to the case study.
-            </a>
+              >Here’s a link to the case study. </a
+            ><br />
             <a
               href="https://drive.google.com/file/d/1aoov3j85UuC33OAascTdV_BWEN2lZiRi/view"
             >
@@ -131,34 +130,18 @@
               width="800"
               alt=""
             />
-            <figcaption class="caption">
-              Guests can take home their own seal stamp ink from the gift shop.
-            </figcaption>
+            <figcaption class="caption"></figcaption>
           </figure>
         </div>
         <div class="project-image">
           <figure>
             <img
-              src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-ink-pad-mockup.jpg"
-              width="1000"
+              src="assets/images/caroline-zhang-resolve-social-enterprise-merchandise-product-spread.jpg"
+              width="900"
               alt=""
             />
             <figcaption class="caption">
-              Ink pads feature select artwork from the exhibit and a thick red
-              paste used traditionally for seal stamps.
-            </figcaption>
-          </figure>
-        </div>
-        <div class="project-image">
-          <figure>
-            <img
-              src="assets/images/chinese-seal-stamps-horse-painting.jpg"
-              width="900"
-              height="1127"
-              alt="A description of the image"
-            />
-            <figcaption class="caption">
-              Night-Shining White by Han Gan (ca. 750) in the Met
+              Product branding focuses on the artwork and artist attributions.
             </figcaption>
           </figure>
         </div>
