--- a/about.html
+++ b/about.html
@@ -89,8 +89,10 @@
       </li>
       <li class="about-item-3">
         <h3>What's wigggle playing right now?</h3>
-        <p>Tomodachi Life (2013) <em>Last updated: September 2025</em></p>
-
+        <p>
+          SILKSONG!!!!! (2025) <em>Last updated: September 2025</em>
+          <img src="assets/images/SILKSONG.jpg" width="150" />
+        </p>
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
           <li class="social-item">
